--- a/static-files/css/style.css
+++ b/static-files/css/style.css
@@ -30,10 +30,11 @@ body {
   color: var(--text-default-color);
 }
 
-.custom-width-date{
+.custom-alert-date{
   width: 50ch;
   align-self: center;
   margin: 0 auto 1rem;
+  padding: 0.75rem;
 }
 
 textarea {
